--- a/index.html
+++ b/index.html
@@ -1,37 +1,145 @@
-<!DOCTYPE html> <!-- 문서 유형을 HTML5로 설정 -->
+<!DOCTYPE html>
+<html>
 
-<html> <!-- HTML 문서의 시작 -->
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <title>KW-Plan-Manager</title>
+  <style>
+    #notification {
+      transition: opacity 0.5s;
+      opacity: 0;
+    }
 
-<head> <!-- 문서의 헤드(메타 정보 및 스타일, 제목)를 정의 -->
+    #notification.show {
+      opacity: 1;
+    }
+  </style>
+</head>
 
-    <!-- Required meta tags -->
-    <meta charset="utf-8"> <!-- 문서의 문자 인코딩을 UTF-8로 설정 -->
-    <meta name="viewport" content="width=device-width, initial-scale=1"> <!-- 화면 크기에 따라 페이지가 적응하도록 설정 -->
+<body>
+  <nav class="navbar bg-body-tertiary">
+    <div class="container">
+      <span class="navbar-brand mb-0 h1">KW-Plan-Manager</span>
+    </div>
+  </nav>
+  <div class="container">
+    <div class="d-flex align-items-center mb-3">
+      <label for="plan-input" class="form-label me-2">Plan</label>
+      <input type="text" class="form-control" id="plan-input" placeholder="Enter a plan here">
+      <button type="button" class="btn btn-primary ms-2" id="add-btn">Add</button>
+    </div>
+  </div>
 
-    <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"> <!-- Bootstrap CSS 파일을 CDN을 통해 불러옴 -->
+  <!-- Plans and Done Lists in Flexbox Layout -->
+  <div class="container">
+    <div class="d-flex">
+      <!-- Plans List -->
+      <div class="flex-grow-1 bg-light rounded-2 p-3 me-2">
+        <h3>Plans</h3>
+        <div id="plan-list">
+          <div class="plan"></div>
+        </div>
+      </div>
 
-    <title>Page Title</title> <!-- 웹 페이지의 제목을 설정 -->
+      <!-- Done List -->
+      <div class="flex-grow-1 bg-light rounded-2 p-3">
+        <h3>Done</h3>
+        <div id="done-list"></div>
+      </div>
+    </div>
+  </div>
 
-    <style> 
-        /* CSS Code */
-    </style> <!-- 내부 CSS 스타일링 영역 종료 -->
+  <div id="notification" class="alert alert-success" style="display: none; position: fixed; top: 20px; right: 20px;">
+    Plan added successfully!
+  </div>
 
-</head> <!-- 헤드 영역 종료 -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+  <script>
+    document.querySelector("#add-btn").addEventListener("click", () => {
+      const input = document.querySelector("#plan-input");
+      const plan = input.value;
 
-<body> <!-- 문서의 본문 시작 -->
+      if (plan) {
+        const newPlan = document.createElement("div");
+        newPlan.classList.add("plan", "bg-light", "p-1", "rounded-2", "d-flex", "justify-content-between", "align-items-center");
+        newPlan.textContent = plan;
 
-    <!-- HTML Code -->
+        const doneButton = document.createElement("button");
+        doneButton.textContent = "Done";
+        doneButton.classList.add("btn", "btn-success", "btn-sm", "ms-2");
+        doneButton.addEventListener("click", () => {
+          moveToDoneList(newPlan, plan);
+        });
+        newPlan.appendChild(doneButton);
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script> <!-- Bootstrap JS 파일을 CDN을 통해 불러옴 -->
+        document.querySelector("#plan-list").appendChild(newPlan);
+        input.value = "";
 
-    <script> <!-- 내부 JavaScript 코드를 위한 영역 시작 -->
-        /* JS Code */
-    </script> <!-- 내부 JavaScript 영역 종료 -->
+        showNotification("Plan added successfully!");
+      }
+    });
 
-</body> <!-- 본문 영역 종료 -->
+    function moveToDoneList(planElement, planText) {
+      const doneItem = document.createElement("div");
+      doneItem.classList.add("done-item", "bg-light", "p-1", "rounded-2", "d-flex", "justify-content-between", "align-items-center");
+      doneItem.textContent = planText;
 
-</html> <!-- HTML 문서 종료 -->
+      const deleteButton = document.createElement("button");
+      deleteButton.textContent = "Delete";
+      deleteButton.classList.add("btn", "btn-danger", "btn-sm", "ms-2");
+      deleteButton.addEventListener("click", () => {
+        doneItem.remove();
+      });
+      doneItem.appendChild(deleteButton);
 
+      document.querySelector("#done-list").appendChild(doneItem);
+      planElement.remove();
+    }
 
-<!--djdjdj-->
+    function showNotification(message) {
+      const notification = document.querySelector("#notification");
+      notification.textContent = message;
+      notification.style.display = "block";
+
+      setTimeout(() => {
+        notification.style.display = "none";
+      }, 3000);
+    }
+    // Enter 키 이벤트 리스너 추가
+document.querySelector("#plan-input").addEventListener("keyup", (event) => {
+  if (event.key === "Enter") {
+    document.querySelector("#add-btn").click();
+  }
+});
+
+// Add 버튼 클릭 이벤트 리스너
+document.querySelector("#add-btn").addEventListener("click", () => {
+  const input = document.querySelector("#plan-input");
+  const plan = input.value;
+
+  if (plan) {
+    const newPlan = document.createElement("div");
+    newPlan.classList.add("plan", "bg-light", "p-1", "rounded-2", "d-flex", "justify-content-between", "align-items-center");
+    newPlan.textContent = plan;
+
+    const doneButton = document.createElement("button");
+    doneButton.textContent = "Done";
+    doneButton.classList.add("btn", "btn-success", "btn-sm", "ms-2");
+    doneButton.addEventListener("click", () => {
+      moveToDoneList(newPlan, plan);
+    });
+    newPlan.appendChild(doneButton);
+
+    document.querySelector("#plan-list").appendChild(newPlan);
+    input.value = "";
+
+    showNotification("Plan added successfully!");
+  }
+});
+
+  </script>
+</body>
+
+</html>
